--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,8 @@
 nav {
-    background-color: darkblue;
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: left;
+    background-color: rgb(99, 99, 199);
     padding: 10px;
 }
 nav a {
@@ -8,26 +11,44 @@ nav a {
     padding: 20px;
 }
 h1 {
-    color: darkblue;
+    color: rgb(44, 85, 138);
 }
-img {
-    width: 200px;
+main img {
+    width: 150px;
     height: auto;
-    border: 1px solid black;
+    border: 1px solid steelblue;
     box-shadow: 0 0 30px gray;
     padding: 2px;
 }
+main {
+    max-width: 840px;
+}
+aside {
+    max-width: 20rem;
+    margin: 1rem;
+    border: 1px solid lightgrey;
+    padding: 1rem;
+    background-color: #dcd7f4;
+    color: black;
+    text-align: center;
+}
+aside img {
+    width: 200px;
+    height: auto;
+    border: 1px solid white;
+}
 p {
-    padding: 10px;
+    padding: 0px;
     color: black;
 }
 footer {
-    background-color: darkblue;
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    background-color: rgb(99, 99, 199);
     padding: 5px;
 }
 footer p {
     color: white;
     display: block;
     text-align: center;
-    text-shadow: blue;
 }
