--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,12 @@
+:root {
+    --heading-backgroung-color: rgb(99, 99, 199);
+    --heading-h1-color: rgb(44, 58, 138);
+}
 nav {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: left;
-    background-color: rgb(99, 99, 199);
+    background-color: var(--heading-backgroung-color);
     padding: 10px;
 }
 nav a {
@@ -11,7 +15,7 @@ nav a {
     padding: 20px;
 }
 h1 {
-    color: rgb(44, 85, 138);
+    color: var(--heading-h1-color);
 }
 main img {
     width: 150px;
@@ -41,7 +45,7 @@ aside img {
 footer {
     margin-top: 15px;
     border-top: 1px solid #000;
-    background-color: rgb(99, 99, 199);
+    background-color: var(--heading-backgroung-color);
     padding: 5px;
 }
 footer p {
